--- a/src/main/resources/templates/full-video-cover.html
+++ b/src/main/resources/templates/full-video-cover.html
@@ -115,10 +115,10 @@
           <div class="row">
             <div class="col-md-6 gx-5 mb-4">
               <div class="bg-image hover-overlay ripple shadow-2-strong" data-mdb-ripple-color="light">
-                <img src="C:/Users/mnb91/Downloads/1.jpg" class="img-fluid" />
-                <a href="#!">
-                  <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
-                </a>
+                <img src="https://mdbootstrap.com/img/new/slides/031.jpg" class="img-fluid" alt="엑박"/>
+<!--            <a href="#!">-->
+<!--              <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>-->
+<!--            </a>-->
               </div>
             </div>
 
